# everyai-core

./: .gitignore
.github/workflows/: js-ci-cd.yml  python-ci-cd.yml
js_package/everyai-core/: LICENSE  README.md  package-lock.json  package.json
js_package/everyai-core/src/: cache.js  cli.js  client.js  config.js  dashboard.js  exceptions.js  governor.js  index.js  routing.js  tracker.js  types.js
js_package/everyai-core/src/providers/: base.js  cerebras.js  cloudflare.js  groq.js  huggingface.js  index.js  mistral.js  nvidia.js  openrouter.js
py_package/: .gitignore  LICENSE  MANIFEST.in  MODULES.md  README.md  pyproject.toml
py_package/.github/workflows/: publish.yml
py_package/everyai_core/: __init__.py  cache.py  cli.py  client.py  config.py  dashboard.py  exceptions.py  governor.py  routing.py  tracker.py  types.py
py_package/everyai_core/providers/: __init__.py  base.py  cerebras.py  cloudflare.py  groq.py  huggingface.py  mistral.py  nvidia.py  openrouter.py
py_package/tests/: __init__.py  test_cache.py  test_cerebras.py  test_client.py  test_cloudflare.py  test_exceptions.py  test_fallback.py  test_governor.py  test_groq.py  test_huggingface.py  test_mistral.py  test_nvidia.py  test_openrouter.py  test_providers.py  test_router.py  test_tracker.py
