[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "everyai-core"
version = "1.1.3"
description = "Connect to every free AI provider with zero setup"
authors = [{name = "Rohan Jangir"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "ai",
    "llm",
    "groq",
    "openrouter",
    "huggingface",
    "cerebras",
    "mistral",
    "cloudflare",
    "nvidia",
    "fallback",
    "caching",
    "rate-limiting",
    "telemetry",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
local = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
everyai = "everyai_core.cli:main"

[tool.setuptools.packages.find]
include = ["everyai_core*"]

[project.urls]
Homepage = "https://github.com/rohan-jangir/everyai-core"